Can now choose an action image. Default provided (lgl themed).

--- a/org/lateralgm/libmaker/icons.properties
+++ b/org/lateralgm/libmaker/icons.properties
@@ -1,19 +1,22 @@
 LibMaker.FRAME_ICON=icons/lgl-128.png
 
-Menu.NEW=icons/new.png
-Menu.OPEN=icons/open.png
-Menu.SAVE=icons/save.png
-Menu.SAVEAS=icons/save-as.png
-Menu.MANUAL=icons/help.png
+Menu.NEW=icons/menu/new.png
+Menu.OPEN=icons/menu/open.png
+Menu.SAVE=icons/menu/save.png
+Menu.SAVEAS=icons/menu/save-as.png
+Menu.MANUAL=icons/menu/help.png
+Menu.ABOUT=icons/menu/info.png
 
-Tool.NEW=icons/new.png
-Tool.OPEN=icons/open.png
-Tool.SAVE=icons/save.png
-Tool.SAVEAS=icons/save-as.png
-Tool.MANUAL=icons/help.png
+Tool.NEW=icons/menu/new.png
+Tool.OPEN=icons/menu/open.png
+Tool.SAVE=icons/menu/save.png
+Tool.SAVEAS=icons/menu/save-as.png
+Tool.MANUAL=icons/menu/help.png
 
 ErrorDialog.COPY=icons/copy.png
 ErrorDialog.OK=icons/accept.png
+
+Action.DEFAULT_TILE=icons/blank-tile.png
 
 GeneralPane.EXEC_CODE=icons/script.png
 
@@ -22,5 +25,5 @@ MockUI.CODE=icons/script.png
 MockUI.CYCLE=icons/reload.png
 MockUI.DELETE=icons/red-x.png
 MockUI.DOWN=icons/down.png
-MockUI.INFO=icons/info.png
+MockUI.INFO=icons/menu/info.png
 MockUI.UP=icons/up.png
