Added ActionPreview. Works great, just not sure where to hook it in.

--- a/org/lateralgm/libmaker/icons.properties
+++ b/org/lateralgm/libmaker/icons.properties
@@ -18,6 +18,9 @@ ErrorDialog.OK=icons/accept.png
 
 Action.DEFAULT_TILE=icons/blank-tile.png
 
+ActionPreview.DISCARD=icons/red-x.png
+ActionPreview.SAVE=icons/accept.png
+
 GeneralPane.EXEC_CODE=icons/script.png
 
 MockUI.ADD=icons/add.png
