Hooked in JoshEdit for code editing. Now our libmaker has the upper hand because it does some syntax coloring. Currently defaults to C++. Adding GML next.

--- a/org/lateralgm/libmaker/icons.properties
+++ b/org/lateralgm/libmaker/icons.properties
@@ -13,13 +13,21 @@ Tool.SAVE=icons/menu/save.png
 Tool.SAVEAS=icons/menu/save-as.png
 Tool.MANUAL=icons/menu/help.png
 
-ErrorDialog.COPY=icons/copy.png
-ErrorDialog.OK=icons/accept.png
+ErrorDialog.COPY=icons/toolbar/copy.png
+ErrorDialog.OK=icons/toolbar/accept.png
 
 Action.DEFAULT_TILE=icons/blank-tile.png
 
+JoshText.OK=icons/toolbar/accept.png
+JoshText.COPY=icons/toolbar/copy.png
+JoshText.CUT=icons/toolbar/cut.png
+JoshText.GOTO=icons/toolbar/line-goto.png
+JoshText.PASTE=icons/toolbar/paste.png
+JoshText.REDO=icons/toolbar/redo.png
+JoshText.UNDO=icons/toolbar/undo.png
+
 ActionPreview.DISCARD=icons/red-x.png
-ActionPreview.SAVE=icons/accept.png
+ActionPreview.SAVE=icons/toolbar/accept.png
 
 GeneralPane.EXEC_CODE=icons/script.png
 
