Hooked in Action Preview with right-aligned toolbar button. Removed dependencies on CustomAction (replaced with AbstractAction).

--- a/org/lateralgm/libmaker/icons.properties
+++ b/org/lateralgm/libmaker/icons.properties
@@ -12,6 +12,7 @@ Tool.OPEN=icons/menu/open.png
 Tool.SAVE=icons/menu/save.png
 Tool.SAVEAS=icons/menu/save-as.png
 Tool.MANUAL=icons/menu/help.png
+Tool.PREVIEW=icons/toolbar/view.png
 
 ErrorDialog.COPY=icons/toolbar/copy.png
 ErrorDialog.OK=icons/toolbar/accept.png
